fix: toast position on mobile

--- a/packages/ui/src/components/molecules/Toast/styles.scss
+++ b/packages/ui/src/components/molecules/Toast/styles.scss
@@ -46,6 +46,7 @@
 
   position: fixed;
   top: var(--fs-toast-top-mobile);
+  right: 0;
   z-index: 10;
   display: flex;
   flex-direction: row;
